Fri Jul 17 12:56:14 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (am_install_var): Use DESTDIR, not DATADIR.  From
	Motoyuki Kasahara.

	* automake.in (scan_dependency_file): Recognize DOS-style paths as
	absolute.
	* ylwrap: Recognize DOS-style paths as absolute.  From Ian Lance
	Taylor.

Fri Jul 17 07:37:20 1998  H.J. Lu  (hjl@gnu.org)

	* ylwrap: Don't use absolute path if the input is in the
	current directory.

Fri Jul 17 11:58:27 1998  Ian Lance Taylor  <ian@cygnus.com>

	* automake.in: Use $(AM_MAKEFLAGS) in every invocation of $(MAKE).
  	* subdirs.am: Likewise.

Thu Jul 16 18:09:03 1998  Ian Lance Taylor  <ian@cygnus.com>

	* remake.am (config.status): Depend upon
	$(CONFIG_STATUS_DEPENDENCIES).
	* automake.in (handle_configure): Examine
	CONFIG_STATUS_DEPENDENCIES.

Tue Jul 14 13:37:48 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am: Always look in srcdir for automake.in.

Tue Jun 23 14:00:27 1998  Ian Lance Taylor  <ian@cygnus.com>

	* progs.am: Don't let $(EXEEXT) interfere with $(transform).
	Report from Mike Stump <mrs@wrs.com>.

Tue Jun  2 13:27:34 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Make CONFIGURE file
	handle local.

	* automake.in (read_am_file): Error if blank line or comment
	follows trailing backslash.  Test syntax.test.
	(file_contents_with_transform): Likewise.

Thu May 28 18:49:47 1998  Ian Lance Taylor  <ian@cygnus.com>

	* automake.in (handle_configure): Always use $(SHELL) when running
	config.status.

Mon Jun  1 14:23:29 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_yacc_lex_cxx): Use AM_CPPFLAGS, AM_CXXFLAGS,
	AM_CFLAGS.
	(output_yacc_build_rule): Use AM_YFLAGS, AM_LFLAGS.
	(handle_dependencies): Don't define CXXMKDEP.

	* clean.am (mostlyclean-generic): Prefix rule with MOSTLYCLEAN.
	(clean-generic): Prefix rule with CLEAN.
	(distclean-generic): Prefix rule with DISTCLEAN.
	(maintainer-clean-generic): Prefix rule with MAINTAINERCLEAN.