@@ -44,6 +44,7 @@ Juergen A. Erhard	jae@laden.ilk.de
 Karl Berry		kb@cs.umb.edu
 Karl Heuer		kwzh@gnu.org
 Kevin Dalley		kevin@aimnet.com
+Kevin Street		street@iname.com
 L. Peter Deutsch	ghost@aladdin.com
 Maciej W. Rozycki	macro@ds2.pg.gda.pl
 Marius Vollmer		mvo@zagadka.ping.de
