@@ -1,3 +1,6 @@
+* There are probably more bugs in variable_conditions_sub along
+  the lines of the one that caused cond4.test to fail.
+
 * give user more control over -I flags
   in particular document a way to override the defaults
 
