@@ -40,4 +40,4 @@ END
 
 $AUTOMAKE || exit 1
 
-test "`grep '^targ_OBJECTS' Makefile.in | wc -l`" -eq 1
+test "`grep 'targ_OBJECTS =' Makefile.in | wc -l`" -eq 8
