@@ -1,0 +1,31 @@
+#! /bin/sh
+
+# Another sources-in-conditional test.  Report from Tim Goodwin.
+
+. $srcdir/defs || exit 1
+
+cat > configure.in << 'END'
+AM_INIT_AUTOMAKE(nonesuch, nonesuch)
+AC_PROG_CC
+AM_CONDITIONAL(ONE, true)
+AM_CONDITIONAL(TWO, false)
+AC_OUTPUT(Makefile)
+END
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = targ
+
+if ONE
+OPT1 = one.c
+endif
+
+if TWO
+OPT2 = two.c
+endif
+
+targ_SOURCES = main.c $(OPT1) $(OPT2)
+END
+
+$AUTOMAKE || exit 1
+
+test "`grep TWO_FALSE Makefile.in | wc -l`" -eq 2
