@@ -1,0 +1,39 @@
+#! /bin/sh
+
+# Yet another sources-in-conditional test.  Report from Tim Goodwin.
+
+. $srcdir/defs || exit 1
+
+cat > configure.in << 'END'
+AM_INIT_AUTOMAKE(nonesuch, nonesuch)
+AC_PROG_CC
+AM_CONDITIONAL(ONE, true)
+AM_CONDITIONAL(TWO, false)
+AC_OUTPUT(Makefile)
+END
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = targ
+
+if ONE
+OPT_SRC = one.c
+endif
+
+if TWO
+OPT_SRC = $(OPT_SRC) two.c
+endif
+
+targ_SOURCES = main.c $(OPT_SRC)
+END
+
+# The bug is that automake hangs.  So we give it a few seconds and
+# then kill it.
+$AUTOMAKE &
+pid=$!
+
+sleep 5
+kill -0 $pid && {
+   kill $pid
+   exit 1
+}
+exit 0
