@@ -1,3 +1,11 @@
+Sat Jul 18 00:27:26 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* cond3.test: Changed to match recent fixes.
+
+Fri Jul 17 23:44:49 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* cond4.test, cond5.test: New files.
+
 Tue May 26 01:44:37 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* syntax.test: New file.
