@@ -1,3 +1,12 @@
+Sat Jul 18 00:24:14 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (variable_conditions_sub): If var is not
+	conditional, but does have conditional subvariables, then return
+	value should be all permutations of subvariable conditions.  Test
+	cond4.test.
+	(handle_source_transform): Define _OBJECTS variable with each
+	condition; no need to define multiple new variables.
+
 Fri Jul 17 12:56:14 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (am_install_var): Use DESTDIR, not DATADIR.  From
@@ -37,7 +46,7 @@ Tue Jun 23 14:00:27 1998  Ian Lance Taylor  <ian@cygnus.com>
 Tue Jun  2 13:27:34 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (scan_one_configure_file): Make CONFIGURE file
-	handle local.
+	handle local.  From Kevin Street.
 
 	* automake.in (read_am_file): Error if blank line or comment
 	follows trailing backslash.  Test syntax.test.
